--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
                     <p class="caption">DEVELOPMENT PORTFOLIO</p>
                 </div>
             </header>
+            <main class="main">
+                <section class="section about">
+                    <h2 class="section-title">About</h2>
+                    <div class="section-content">
+                        <dl class="definition-list">
+                            <dt class="definition-item definition-item-title">Name</dt>
+                            <dd class="definition-item definition-item-description">김다롬</dd>
+                            <dt class="definition-item definition-item-title">Birth</dt>
+                            <dd class="definition-item definition-item-description">1997.05.19</dd>
+                            <dt class="definition-item definition-item-title">Education</dt>
+                            <dd class="definition-item definition-item-description">가톨릭대학교 컴퓨터공학과</dd>
+                        </dl>
+                    </div>
+                </section>
+            </main>
         </div>
     </body>
 </html>
