--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
                         </dl>
                     </div>
                 </section>
+                <section class="section biography">
+                    <h2 class="section-title">Biography</h2>
+                    <div class="section-content">
+                        <dl class="definition-list">
+                            <dt class="definition-item definition-item-title">1997.05.19</dt>
+                            <dd class="definition-item definition-item-description">롬가네 셋째 탄생</dd>
+                            <dt class="definition-item definition-item-title">2013.03.02</dt>
+                            <dd class="definition-item definition-item-description">백석고등학교 입학</dd>
+                            <dt class="definition-item definition-item-title">2016.03.02</dt>
+                            <dd class="definition-item definition-item-description">가톨릭대학교 입학</dd>
+                        </dl>
+                    </div>
+                </section>
             </main>
         </div>
     </body>
