--- a/index.html
+++ b/index.html
@@ -57,6 +57,41 @@
                         </dl>
                     </div>
                 </section>
+                <section class="section skills">
+                    <h2 class="section-title">Skills</h2>
+                    <ul class="section-content category-list">
+                        <li class="category-item">
+                            <dl class="skill-list">
+                                <dt class="skill-item-title">Language</dt>
+                                <dd class="skill-item-description">c++</dd>
+                                <dd class="skill-item-description">java</dd>
+                                <dd class="skill-item-description">Javascript</dd>
+                                <dd class="skill-item-description">html / css</dd>
+                                <dd class="skill-item-description"></dd>
+                            </dl>
+                        </li>
+                        <li class="category-item">
+                            <dl class="skill-list">
+                                <dt class="skill-item-title">Framework</dt>
+                                <dd class="skill-item-description">node.js</dd>
+                                <dd class="skill-item-description">express</dd>
+                                <dd class="skill-item-description">spring boot</dd>
+                                <dd class="skill-item-description"></dd>
+                                <dd class="skill-item-description"></dd>
+                            </dl>
+                        </li>
+                        <li class="category-item">
+                            <dl class="skill-list">
+                                <dt class="skill-item-title">SQL</dt>
+                                <dd class="skill-item-description">MySQL</dd>
+                                <dd class="skill-item-description">mongoDB</dd>
+                                <dd class="skill-item-description"></dd>
+                                <dd class="skill-item-description"></dd>
+                                <dd class="skill-item-description"></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </section>
             </main>
         </div>
     </body>
