--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
                         </li>
                     </ul>
                 </section>
+                <section class="section projects">
+                    <h2 class="section-title">Projects</h2>
+                    <div class="section-content">
+                        <ul class="project-list">
+                            <li class="project-item">
+                                <h3 class="project-title">Lovket</h3>
+                                <p class="project-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi assumenda at quia, quaerat numquam autem! Harum eveniet ea nulla? Eligendi iure quos harum rerum aspernatur magni ipsam nobis, maxime eaque.</p>
+                            </li>
+                            <li class="project-item">
+                                <h3 class="project-title">Desserts</h3>
+                                <p class="project-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus praesentium dolores pariatur soluta quos sapiente quia aut maiores, voluptate, nihil veritatis libero eaque laborum non ducimus autem obcaecati commodi magnam, eos eligendi at iure officiis adipisci cumque. Enim vero porro in aliquid architecto cum magni illo ex, dignissimos, velit corporis.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
             </main>
         </div>
     </body>
