--- a/index.html
+++ b/index.html
@@ -110,4 +110,21 @@
             </main>
         </div>
     </body>
+    <footer>
+        <div class="contact">
+            <h2 class="contact-title">Contact</h2>
+            <adress class="address">
+                <ul class="contact-list">
+                    <li class="contact-item">
+                        <a href="https://dar0m.tistory.com/">blog. darom</br></a>
+                        <a href="tel:010-6269-4011">T. 010 6269 4011</br></a>
+                        <a href="mailto:vo0a195@gamil.com">vo0a195@gamil.com</a>
+                    </li>
+                </ul>
+            </adress>
+            <small class="copyright">            
+              COPYRIGHT INFORMATION GOES HERE © 2020. ALL RIGHTS RESERVED.
+            </small>
+        </div>
+    </footer>
 </html>
