--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DAROM</title>
+        <meta name="description" content="김다롬 포트폴리오 사이트입니다.">
+        <meta property="og:title" content="김다롬의 포트폴리오">
+        <meta property="og:description" content="김다롬의 포트폴리오 사이트입니다.">
+        <meta property="og:image" content="https://user-images.githubusercontent.com/44438366/76956072-aab03500-6956-11ea-8476-c4ca5b836750.png">
+        <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/dfbd54160d.js" crossorigin="anonymous"></script>
     </head>
     <body>
