--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div id="navbar" class="navbar">
                     <div class="navbar-inner">
                         <h1 class="logo"><a href="/">darom</a></h1>
-                        <button id="menu-button" class="menu-button" type="button"><i class="fas fa-bars 7x"></i></button>
+                        <button id="menu-button" class="menu-button" type="button"><i class="fas fa-bars 7x"></i></button>
                         <nav id="nav" class="nav">
                             <ul class="menu-list">
                                 <li class="menu-item"><a href="#about">About</a></li>
@@ -81,16 +81,16 @@
                         <li class="category-item">
                             <dl class="skill-list">
                                 <dt class="skill-item-title">Framework</dt>
+                                <dd class="skill-item-description">spring boot</dd>
                                 <dd class="skill-item-description">node.js</dd>
                                 <dd class="skill-item-description">express</dd>
-                                <dd class="skill-item-description">spring boot</dd>
                                 <dd class="skill-item-description"></dd>
                                 <dd class="skill-item-description"></dd>
                             </dl>
                         </li>
                         <li class="category-item">
                             <dl class="skill-list">
-                                <dt class="skill-item-title">SQL</dt>
+                                <dt class="skill-item-title">DB</dt>
                                 <dd class="skill-item-description">MySQL</dd>
                                 <dd class="skill-item-description">mongoDB</dd>
                                 <dd class="skill-item-description"></dd>
